@@ -130,7 +130,7 @@ sub ubic_services {
             'bee-habit'  => daemon('bee-habit'),
             'bee-inbox'  => daemon('bee-inbox'),
             'rtm-adder'  => daemon('rtm-adder'),
-            'sentbox-reward'  => daemon('sentbox-reward'),
+            'sentbox-reward'  => agent('Action::SendmailXP'),
             'bee-notify' => daemon('bee-notify'),
             'geo-notify' => daemon('geo-notify'),
             'social-notify' => agent('Action::SocialNotify'),
