@@ -11,7 +11,7 @@ my $exobrain = Exobrain->new;
 
 isa_ok($exobrain,'Exobrain');
 
-# Invalid ways of generatingt his intent
+# Invalid ways of generating this intent
 
 dies_ok { $exobrain->intent('HabitRPG', direction => 'up'  , nosend => 1 ) } "no task";
 dies_ok { $exobrain->intent('HabitRPG', task => 'test-goal', nosend => 1 ) } "no direction";
@@ -23,7 +23,6 @@ dies_ok { $exobrain->intent('HabitRPG', task => 'test-goal', nosend => 1 ) } "no
     my $message = $exobrain->intent('HabitRPG',
         task => 'test-goal',
         direction => 'up',
-        public => 0,
         nosend => 1,
     );
 
@@ -38,19 +37,5 @@ dies_ok { $exobrain->intent('HabitRPG', task => 'test-goal', nosend => 1 ) } "no
     like($message->summary,qr/Move test-goal up/,'summary');
 
 }
-
-{
-
-    # Test default public flag
-
-    my $message = $exobrain->intent('HabitRPG',
-        task => 'test-goal',
-        direction => 'up',
-        nosend => 1,
-    );
-
-    is( $message->public, 0, 'default 0 public flag');
-}
-
 
 done_testing;
