@@ -3,6 +3,7 @@ Revision history for Exobrain
 {{$NEXT}}
 
     * META: Updated meta-info for distribution.
+    * HRPG: Fixed handling of XP for Sending mail, and XP in general.
 
 1.00      2014-02-26 02:44:28EST-0500 America/Montreal
 
